--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "smart_locker_backend",
   "version": "1.0.0",
   "main": "account.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node account.js"
   },
